log
Wed 27 Mar 2024 02:00:38 PM UTC: 
 list.c | 18 +++++++++++++-----
 1 file changed, 13 insertions(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
60024d0
Wed 27 Mar 2024 02:01:23 PM UTC: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
be090ed
Wed 27 Mar 2024 02:05:13 PM UTC: 
 list.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  0|0
be9f27b
Wed 27 Mar 2024 02:13:13 PM UTC: 
 list.c | 18 ++++++++++++++----
 1 file changed, 14 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
list.c: In function ‘nextList’:
list.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
   51 | }
      | ^
list.c: In function ‘lastList’:
list.c:58:1: error: control reaches end of non-void function [-Werror=return-type]
   58 | }
      | ^
list.c: In function ‘prevList’:
list.c:65:1: error: control reaches end of non-void function [-Werror=return-type]
   65 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
228628d
Wed 27 Mar 2024 02:14:02 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
94a1c52
Wed 27 Mar 2024 02:15:24 PM UTC: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
083ba1b
Wed 27 Mar 2024 02:26:47 PM UTC: 
 list.c | 39 ++++++---------------------------------
 1 file changed, 6 insertions(+), 33 deletions(-)
 tests:  2|5
total_score: 15/70
2eefca8
Wed 27 Mar 2024 02:28:56 PM UTC: 
 list.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccEYKK4X.o: in function `test_last_prev':
test.c:(.text+0x39f): undefined reference to `lastList'
collect2: error: ld returned 1 exit status
Compilation failed
406f041
Wed 27 Mar 2024 02:29:47 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
bbbe727
Wed 27 Mar 2024 02:31:40 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
1d57898
Wed 27 Mar 2024 02:32:45 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
e116c06
Wed 27 Mar 2024 02:36:08 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
4e8bd73
Wed 27 Mar 2024 02:36:31 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5f56716
Wed 27 Mar 2024 02:36:49 PM UTC: 
 list.c | 31 +++++++++++++------------------
 1 file changed, 13 insertions(+), 18 deletions(-)
 tests:  0|0
ca1862d
Wed 27 Mar 2024 02:37:10 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
80556b6
